2011-03-29  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (loopback): New section.

2011-03-29  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/disk/loopback.c (GRUB_MOD_INIT): Stop documenting
	removed -p option.

2011-03-29  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (BIOS installation): New section, partly based on
	previous text in other sections.
	(Installing GRUB using grub-install): Replace BIOS discussion with a
	cross-reference.
	(Images): Likewise.

2011-03-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (find_partition_start)
	[HAVE_DIOCGDINFO]: Add safety checks.

2011-03-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/10_kfreebsd.in: Allow ufs.ko to be missing as it's
	per default compiled in kernel and prior to 8.0 isn't shipped at all.

2011-03-29  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/disk/mdraid1x_linux.c (grub_mdraid_detect): If
	real_sb->size is zero (e.g. RAID-0), get the disk size from
	real_sb->data_size instead.
	Fixes Ubuntu bug #743136.

2011-03-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/misc.c (grub_normal_print_device_info): Use correct
	printf clauses for printing size and start.

2011-03-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ext2.c (grub_ext2_read_inode): Fix an overflow.
	Reported and tested by: Timothy Nikkel.

2011-03-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/gfxterm.c (dirty_region_add): Move core part to ...
	(dirty_region_add_real): ... this.
	(dirty_region_add): Don't discard margin refresh when performing
	scheduled repaint.

2011-03-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/relocator.c (allocate_regstart)
	[!DEBUG_RELOCATOR_NOMEM_DPRINTF]: Avoid grub_dprintf since not all
	terminals are capabple of malloc-free operation.
	(allocate_inreg) [!DEBUG_RELOCATOR_NOMEM_DPRINTF]: Likewise.
	(malloc_in_range) [!DEBUG_RELOCATOR_NOMEM_DPRINTF]: Likewise.
